<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:background="@drawable/selector_wenba_item"
                android:padding="@dimen/d15"
                android:layout_margin="@dimen/d7"
                android:layout_height="wrap_content">

    <com.shuzhengit.zhixin.view.CircleImageView
        android:layout_width="@dimen/d30"
        android:layout_height="@dimen/d30"
        android:src="@drawable/ic_normal_icon"
        android:id="@+id/civAvatar"/>
    <TextView
        style="@style/text14spTextColorBlack"
        android:text="吧主名字"
        android:layout_toRightOf="@id/civAvatar"
        android:layout_alignTop="@id/civAvatar"
        android:layout_marginTop="@dimen/d5"
        android:layout_marginLeft="@dimen/d15"
        android:id="@+id/tvAdminName"
        />
    <TextView
        android:layout_below="@id/tvAdminName"
        android:layout_alignLeft="@id/tvAdminName"
        android:layout_alignStart="@id/tvAdminName"
        style="@style/text12spTextColorBlueGrey700"
        android:text="喜欢就强奸啊,表白有什么用?追到就操,操不到就下药。分手了就发裸照。连监狱都蹲不起。还敢说爱她?"
        android:gravity="left"
        android:id="@+id/tvDescription"
        android:layout_marginTop="@dimen/d5"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d3"
        android:layout_below="@id/tvDescription"
        android:layout_marginTop="@dimen/d15"
        android:background="@drawable/shape_line_dotline"
        android:id="@+id/dotline"
        />
    <TextView
        style="@style/text12spTextColorPrimary"
        android:text="@string/wenBaType"
        android:layout_marginTop="@dimen/d15"
        android:layout_below="@id/dotline"
        android:id="@+id/tvType"
        android:layout_alignLeft="@id/civAvatar"
        />
    <View
        style="@style/dividerVertical"
        android:layout_alignTop="@id/tvType"
        android:layout_alignBottom="@id/tvType"
        android:layout_toRightOf="@id/tvType"
        android:id="@+id/line"
        android:layout_marginLeft="@dimen/d5"
        />
    <TextView
        style="@style/text12spTextColorBlueGrey700"
        android:text="@string/userFollow"
        android:id="@+id/tvCommentCount"
        android:layout_toRightOf="@id/tvType"
        android:layout_alignTop="@id/tvType"
        android:layout_alignBottom="@id/tvType"
        android:layout_marginLeft="@dimen/d10"
        />
    <View
        style="@style/dividerVertical"
        android:layout_alignTop="@id/tvCommentCount"
        android:layout_alignBottom="@id/tvCommentCount"
        android:id="@+id/line2"
        android:layout_toRightOf="@id/tvCommentCount"
        android:layout_marginLeft="@dimen/d5"
        android:layerType="software"
        />
    <TextView
        style="@style/text12spTextColorBlueGrey700"
        android:text="@string/askCount"
        android:layout_alignTop="@id/tvCommentCount"
        android:layout_alignBottom="@id/tvCommentCount"
        android:layout_toRightOf="@id/tvCommentCount"
        android:layout_marginLeft="@dimen/d10"
        android:id="@+id/tvAskCount"
        />
</RelativeLayout>