<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">
    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="@dimen/d300"
            android:layout_height="@dimen/d44"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/d15"
            android:layout_marginRight="@dimen/d15"
            android:layout_marginTop="@dimen/d15"
            android:inputType="phone"
            android:background="@drawable/line_et_bg"
            android:cursorVisible="true"
            android:drawableLeft="@drawable/selector_et_phone"
            android:drawablePadding="@dimen/d15"
            android:hint="手机号码"
            />
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="@dimen/d300"
            android:layout_height="@dimen/d44"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/d15"
            android:layout_marginRight="@dimen/d15"
            android:layout_marginTop="@dimen/d15"
            android:background="@drawable/line_et_bg"
            android:cursorVisible="true"
            android:drawableLeft="@drawable/select_password"
            android:drawablePadding="@dimen/d15"
            android:hint="@string/password"
            android:inputType="textPassword"
            />
        <RelativeLayout
            android:layout_width="@dimen/d300"
            android:layout_height="@dimen/d44"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/d24"
            >

            <EditText
                android:id="@+id/etCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/line_et_bg"
                android:drawableLeft="@drawable/selector_code"
                android:drawablePadding="@dimen/d15"
                android:hint="验证码"
                android:inputType="number"
                android:textCursorDrawable="@drawable/shape_et_cursor"
                android:textSize="@dimen/d15"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/etCode"
                android:layout_centerVertical="true">

                <Button
                    android:id="@+id/btnSendCode"
                    android:layout_width="@dimen/d100"
                    android:layout_height="@dimen/d25"
                    android:background="@drawable/selector_send_code"
                    android:onClick="sendCode"
                    android:padding="@dimen/d3"
                    android:text="@string/sendValidCode"
                    android:textColor="#fff"
                    android:textSize="@dimen/d12"
                    />
            </LinearLayout>
        </RelativeLayout>


        <Button
            android:layout_width="@dimen/d300"
            android:layout_height="@dimen/d44"
            android:layout_marginTop="@dimen/d15"
            android:background="@drawable/shape_btn_login"
            android:onClick="register"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/d15"
            />

    </LinearLayout>

</RelativeLayout>
