<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/d7"
                android:background="@drawable/selector_wenba_item">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/d150"
        android:layout_marginTop="@dimen/d40"
        android:id="@+id/ivThumbnail"
        android:src="@drawable/test"
        android:scaleType="centerCrop"
        />

    <com.shuzhengit.zhixin.view.CircleImageView
        android:id="@+id/civAvatar"
        android:layout_width="@dimen/d45"
        android:layout_height="@dimen/d45"
        android:layout_alignTop="@id/ivThumbnail"
        android:layout_marginTop="-30dp"
        android:layout_marginLeft="@dimen/d15"
        android:layout_marginStart="@dimen/d15"
        android:src="@drawable/ic_normal_icon"
        app:civ_border_color="@color/colorWhite"
        app:civ_border_width="@dimen/d1"/>

    <TextView
        android:id="@+id/tvAdminName"
        style="@style/text12spTextColorBlueGrey700"
        android:layout_alignTop="@id/civAvatar"
        android:layout_marginLeft="@dimen/d15"
        android:layout_marginTop="@dimen/d7"
        android:layout_toRightOf="@id/civAvatar"
        android:text="吧主名字"
        />
    <TextView
        style="@style/text12spTextColorBlueGrey500"
        android:text="职业"
        android:layout_marginLeft="@dimen/d15"
        android:id="@+id/tvProfession"
        android:layout_toRightOf="@id/tvAdminName"
        android:layout_alignBottom="@id/tvAdminName"
        />
    <TextView
        android:layout_marginLeft="@dimen/d15"
        android:layout_marginRight="@dimen/d15"
        android:layout_width="match_parent"
        style="@style/text16spTextColorBlack"
        android:layout_below="@id/ivThumbnail"
        android:layout_marginTop="@dimen/d15"
        android:id="@+id/tvDescription"
        android:maxLines="2"
        android:ellipsize="end"
        android:text="喜欢就强奸啊,表白有什么用?追到就操,操不到就下药。分手了就发裸照。连监狱都蹲不起。还敢说爱她?"
        android:gravity="start"/>
    <TextView
        style="@style/text12spTextColorBlueGrey500"
        android:text="@string/wenBaType"
        android:layout_marginTop="@dimen/d15"
        android:id="@+id/tvType"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/tvDescription"
        android:layout_alignLeft="@id/tvDescription"
        android:layout_alignStart="@id/tvDescription"
        />
    <View
        android:layout_alignTop="@id/tvType"
        android:layout_alignBottom="@id/tvType"
        android:layout_toRightOf="@id/tvType"
        android:layout_marginLeft="@dimen/d7"
        style="@style/dividerVertical"
        android:layout_below="@id/tvDescription"
        android:layout_height="wrap_content"
        />
    <TextView
        style="@style/text12spTextColorBlueGrey500"
        android:text="@string/userFollow"
        android:layout_marginTop="@dimen/d15"
        android:layout_toRightOf="@id/tvType"
        android:layout_marginLeft="@dimen/d15"
        android:layout_below="@id/tvDescription"
        android:id="@+id/tvFollowCount"
        />

    <View
        android:layout_alignTop="@id/tvFollowCount"
        android:layout_alignBottom="@id/tvFollowCount"
        android:layout_toRightOf="@id/tvFollowCount"
        android:layout_marginLeft="@dimen/d7"
        style="@style/dividerVertical"
        android:layout_below="@id/tvDescription"
        android:layout_height="wrap_content"
        />
    <TextView
        style="@style/text12spTextColorBlueGrey500"
        android:layout_toRightOf="@id/tvFollowCount"
        android:layout_below="@id/tvDescription"
        android:layout_marginLeft="@dimen/d15"
        android:layout_marginStart="@dimen/d15"
        android:layout_marginTop="@dimen/d15"
        android:id="@+id/tvAskCount"
        android:text="@string/askCount"
        android:layout_marginBottom="@dimen/d15"
        />
    <com.shuzhengit.zhixin.view.FollowTextView
        android:layout_width="@dimen/d55"
        android:layout_height="@dimen/d25"
        style="@style/text14spTextColorWhite"
        android:id="@+id/tvFollow"
        app:isFollow="false"
        app:followed="已关注"
        app:unFollowed="+ 关注"
        app:followedTextColor="@color/grey700"
        app:unFollowedTextColor="@color/colorWhite"
        app:unFollowBackground="@drawable/shape_btn_login"
        app:followBackground="@drawable/shape_column_bg"
        android:layout_marginTop="@dimen/d10"
        android:layout_marginRight="@dimen/d15"
        android:layout_alignParentRight="true"
        />
    <!--<View-->
        <!--style="@style/dividerHorizontal"-->
        <!--android:layout_below="@id/tvQuestionCount"-->
        <!--/>-->
</RelativeLayout>